--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native": "^0.73.0",
     "dayjs": "^1.11.10",
     "expo": "~50.0.7",
     "expo-crypto": "~12.8.1",
@@ -25,6 +26,7 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
     "expo-splash-screen": "~0.26.4",
+    "expo-sqlite": "~13.3.0",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
